data/derived/fa15/progs/unify/prog2783.ml.out
Characters 29-44:
  let fixpoint (f,b) = wwhile ((f x , x = f x) ,b);;
                               ^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
